# bevy_nodegraph_scripting

./: Cargo.toml  rustfmt.toml
.cargo/: config.toml
src/: compiler.rs  flow.rs  main.rs  node_menu.rs  type_data.rs  ui.rs
src/again/: apply_node.rs  mod.rs  ownership_node.rs  primitive_node.rs  start_node.rs
src/node/: mod.rs  node_traits.rs  shape.rs  total_z_ordering.rs
src/node/interaction/: drag_snap.rs  dragging.rs  mod.rs
src/node/nodes/: primitive.rs
src/nodes/: apply_node.rs  breakdown_node.rs  buildup_node.rs  for_node.rs  function_node.rs  if_else_node.rs  mod.rs  ownership_node.rs  primitive_node.rs  query_node.rs  start_node.rs  tuple_breakdown_node.rs
src/ports/: connection.rs  data_port.rs  flow_port.rs  mod.rs  sided.rs
