[package]
name = "bevy_node_scripting"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.0-rc.1", features = ["reflect_functions"] }
egui-snarl = { git = "https://github.com/zakarumych/egui-snarl" }
bevy_egui = { git = "https://github.com/Friz64/bevy_egui", branch = "bevy-0.16" }
egui = "0.31.1"
#gc-arena = "0.5.3"
